# audit-cef

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
audisp/: Makefile.in
audisp/plugins/: Makefile.in
audisp/plugins/builtins/: Makefile.in
audisp/plugins/cef/: Makefile  Makefile.am  Makefile.in  audisp-cef.c  cef-config.c
audisp/plugins/prelude/: Makefile.in
audisp/plugins/remote/: Makefile.in
audisp/plugins/zos-remote/: Makefile.in
auparse/: Makefile.in  auparse.c
auparse/test/: Makefile.in
bindings/: Makefile.in
bindings/python/: Makefile.in
docs/: Makefile.in
init.d/: Makefile.in
lib/: Makefile.in
lib/test/: Makefile.in
src/: Makefile.in  ausearch-string.h
src/libev/: Makefile.in
src/mt/: Makefile.in
src/test/: Makefile.in
swig/: Makefile.in  audit.py
tools/: Makefile.in
tools/aulast/: Makefile.in
tools/aulastlog/: Makefile.in
tools/ausyscall/: Makefile.in
